# scout

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: build.yml  release.yml  test.yml  tests.yml
src/: app.rs  event.rs  fields.rs  lib.rs  log.rs  logging.rs  main.rs  parsed_fields.rs  ui.rs  utils.rs
tests/: app.rs  fields.rs  ui.rs
