[package]
name = "scooter"
version = "0.2.0"
edition = "2021"
authors = ["thomasschafer97@gmail.com"]
license = "MIT"
description = "Interactive find and replace in the terminal"
readme = "README.md"
homepage = "https://github.com/thomasschafer/scooter"
repository = "https://github.com/thomasschafer/scooter"
keywords = ["cli", "find", "search", "replace"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.18", features = ["derive"] }
content_inspector = "0.2.4"
crossterm = { version = "0.27", features = ["event-stream"] }
dirs = "5.0.1"
etcetera = "0.8.0"
futures = "0.3.31"
ignore = "0.4.22"
itertools = "0.13.0"
log = "0.4.22"
ratatui = "0.27.0"
regex = "1.10.6"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
similar = "2.6.0"
simple-log = "2.1.1"
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.12.0"
rand = "0.8.5"

[lib]
name = "scooter"
path = "src/lib.rs"

[lints.rust]
rust_2018_idioms = "warn"

[profile.release]
lto = true
