[package]
name = "scooter"
version = "0.2.1"
edition = "2021"
authors = ["thomasschafer97@gmail.com"]
license = "MIT"
description = "Interactive find and replace in the terminal"
readme = "README.md"
homepage = "https://github.com/thomasschafer/scooter"
repository = "https://github.com/thomasschafer/scooter"
keywords = ["cli", "find", "search", "replace"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
content_inspector = "0.2.4"
crossterm = { version = "0.27", features = ["event-stream"] }
dirs = "5.0.1"
etcetera = "0.8.0"
fancy-regex = "0.14.0"
futures = "0.3.31"
ignore = "0.4.23"
itertools = "0.13.0"
log = "0.4.22"
parking_lot = "0.12.3"
ratatui = "0.27.0"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
similar = "2.6.0"
simple-log = "2.1.1"
tokio = { version = "1.41.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.14.0"
rand = "0.8.5"

[lib]
name = "scooter"
path = "src/lib.rs"

[lints.rust]
rust_2018_idioms = "warn"

[profile.release]
lto = true
